--- a/stats.html
+++ b/stats.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <!--Styling-->
-        <link href="static/styles.css" rel="stylesheet">
+        <link href="website/styles.css" rel="stylesheet">
 
         <!-- http://getbootstrap.com/docs/5.1/ -->
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
@@ -14,19 +14,28 @@
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/" style="color: #ffffff">Dexamethasone Benchmark</a>
+                <a class="navbar-brand" href="index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="/stats" style="color: #ffffff">Stats</a></li>
+                        <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <main class="container-fluid py-4">
-            {% block main %}{% endblock %}
+            <h2>
+                Stats
+            </h2>
+            <ul>
+                <li>Data sources:</li>
+                <li>Total datasets:</li>
+                <li>Total Organisms:</li>
+                <li>Total Genes:</li>
+                <li>Total Notebooks:</li>
+            </ul>
         </main>
     </body>
 </html>
