--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
+            <div class="container-fluid" id="nav-text">
                 <a class="navbar-brand" href="index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </nav>
-        <main class="container-fluid py-4">
+        <main class="py-4">
             <h2>
                 Stats
             </h2>
@@ -37,5 +37,47 @@
                 <li>Total Notebooks:</li>
             </ul>
         </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-2 col-sm text-center">
+                        <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
+                            <img class="rounded" src="website/icahn_cb.png" style="height: 5rem;">
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm text-center">
+                        <a href="http://lincs-dcic.org" target="_blank">
+                            <img class="rounded" src="website/dcic_light.png" style="height: 5rem;">
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm text-center">
+                        <a href="https://labs.icahn.mssm.edu/maayanlab/" target="_blank">
+                            <img class="rounded" src="website/maayanlab_logo.png" style="height: 5rem;">
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm">
+                        <div class="row my-2">
+                            <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
+                                <span class="badge badge-light">
+                                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+                                         style="width: 1rem;">
+                        </span>
+                                View source code
+                            </a>
+                        </div>
+                        <div class="row my-2">
+                            <a class="badge badge-secondary px-2"
+                               href="https://github.com/MaayanLab/dex-benchmark/issues/new" target="_blank">
+                                <span class="badge badge-light">
+                                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+                                     style="width: 1rem;">
+                                    </span>
+                                Submit an issue
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
