--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <a>Benchmarking Clustering Methods</a>
                         </li>
                         <li>
-                            <a href="Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.ipynb">Benchmarking RNA-seq DEG Methods</a>
+                            <a href="Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html">Benchmarking RNA-seq DEG Methods</a>
                         </li>
                         <li>
                             <a>Benchmarking Enrichment Analysis Methods</a>
