--- a/index.html
+++ b/index.html
@@ -53,13 +53,8 @@
                         Dexamethasone Microarray
                     </p>
                     <ul>
-                        <li>
-                            <a href="dex_signatures_data/CREEDS_data/filtered_drug_perturbations-DM.csv">Drug Matrix Data - CodeLink Arrays</a>
-                        </li>
-                        <li>
-                            <a href="dex_signatures_data/GEN3VA_data/Dexamethasone effect on glucocorticoid-resistant and -sensitive lymphoblastic leukemia cell lines/">Dexamethasone effect on glucocorticoid-resistant and -sensitive lymphoblastic leukemia cell lines</a>
-                            <a></a>
-                        </li>
+                        <li><a href="dex_signatures_data/CREEDS_data/filtered_drug_perturbations-DM.csv">Drug Matrix Data - CodeLink Arrays</a></li>
+                        <li><a href="website/GEN3VA.html">Dexamethasone Gene Signatures from GEN3VA</a></li>
                     </ul>
                     <p>
                         NR3C1 ChIP-Seq
