--- a/stats.html
+++ b/stats.html
@@ -30,9 +30,10 @@
                 Stats
             </h2>
             <ul>
-                <li>Data sources:</li>
-                <li>Total datasets:</li>
-                <li>Total Notebooks:</li>
+                <li>Data sources: GEO, CREEDS, GEN3VA, L1000</li>
+                <li>Total studies and datasets: </li>
+                <li>Total organisms: 4</li>
+                <li>Total Notebooks: 1</li>
             </ul>
         </main>
         <footer class="footer">
