--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
                     </p>
                     <ul>
                         <li>
-                            <a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE186104">The effect of lithium and dexamethasone on fetal rat metatarsal bones transcriptome</a>
+                            <a href="https://docs.google.com/spreadsheets/d/1dXm3RC852vQdg7s3vaZwwFotxbi5AnYGa0mYMUmLtn8/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Studies</a> (Google Sheets)
                         </li>
                     </ul>
                     <p>
                         Dexamethasone Microarray
                     </p>
                     <ul>
-                        <li><a href="dex_signatures_data/CREEDS_data/filtered_drug_perturbations-DM.csv">Drug Matrix Data - CodeLink Arrays</a></li>
-                        <li><a href="website/GEN3VA.html">Dexamethasone Gene Signatures from GEN3VA</a></li>
+                        <li><a href="dex_signatures_data/CREEDS_data/filtered_drug_perturbations-DM.csv">Drug Matrix Data - CodeLink Arrays</a> (File Download)</li>
+                        <li><a href="website/GEN3VA.html">Dexamethasone Gene Signatures from GEN3VA</a> (Webpage)</li>
                     </ul>
                     <p>
                         NR3C1 ChIP-Seq
                     </p>
                     <ul>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing">Compiled Spreadsheet</a>
+                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Studies</a> (Google Sheets)
                         </li>
                     </ul>
                     <p>
