--- a/index.html
+++ b/index.html
@@ -8,39 +8,36 @@
 
         <!--Styling-->
         <link href="website/styles.css" rel="stylesheet">
+        <link href="website/favicon.ico" rel="icon">
 
         <title>Dexamethasone Benchmark</title>
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
-                <a class="navbar-brand" href="/index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
+                <img alt="logo" src="website/logo.png" style="height: 3.5rem;">
+                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmark</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
+                        <li class="nav-item"><a class="nav-link" href="website/about.html" style="color: #ffffff">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="website/stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <main class="py-4">
-            <h2>
+            <h2 class="text-center">
                 The Dexamethasone Benchmark: Datasets and Code to Evaluate the Quality of Methods for Processing Omics Data
             </h2>
-            <img alt="graphical abstract" src="website/graphical_abstract.png" width="60%" class = "center">
-            <p>
-                Given recent technological advances that have made collecting information such as genetic sequences, gene expression, and molecule interactions quicker and more cost efficient, there is now a large wealth of biological data that can be used to answer new biological questions. Many tools and algorithms have been developed to analyze newly available omics data. Some examples include identifying differentially expressed genes, gene associations with cellular and organismal phenotypes, and the functional binding of proteins to regulatory sites on the genome. In order to evaluate methods that perform these tasks, there is a need for a benchmark which objectively compares the quality of tools and algorithms to maximally extract biological knowledge from the data. 
-            </p>
-            <p>
-                The goal of this resource is to provide the community with the dataset and tools needed for benchmarking different tools for gene expression analysis. Gene expression and transcription factor binding data for the drug dexamethasone and its known target, the Glucocorticoid Receptor (GR) (NR3C1), are provided along with code that demonstrates how to perform benchmarks for comparing gene expression analysis steps, such as alignment, data normalization, unsupervised cluster identification, differential expression analysis, and enrichment analysis. Users can compare new methods that they developed with state-of-the-art algorithms currently used by the community to perform such analyses. Differences between existing methods and new methods can be performed with Jupyter notebooks that can be customized for different needs. Overall, the dex benchmark provides a step forward toward improving the quality of bioinformatics workflow for the betterment of knowledge extraction from omics datasets.
-            </p>
+            <img alt="graphical abstract" src="website/graphical_abstract.png" width="65%" class = "center">
             <div id="files">
                 <div class="box" id="data">
-                    <b>
-                        Data 
-                    </b>
+                    <h5>
+                        Curated and Processed Datasets 
+                    </h5>
                     <p>
                         Dexamethasone RNA-seq
                     </p>
@@ -54,6 +51,7 @@
                     </p>
                     <ul>
                         <li><a href="dex_signatures_data/CREEDS_data/filtered_drug_perturbations-DM.csv">Drug Matrix Data - CodeLink Arrays</a> (File Download)</li>
+                        <li><a href="dex_signatures_data/CREEDS_data/filtered_drug_perturbations-p1.0.csv">Dex and Related Drug Pertubations</a> from <a href="https://maayanlab.cloud/CREEDS/" target="_blank">CREEDS</a> (File Download)</li>
                         <li><a href="website/GEN3VA.html">Dexamethasone Gene Signatures from GEN3VA</a> (Webpage)</li>
                     </ul>
                     <p>
@@ -67,11 +65,20 @@
                     <p>
                         L1000
                     </p>
+                    <ul>
+                        <li>
+                            Dexamethasone Signatures
+                        </li>
+                        <li>
+                            NR3C1 Pertubations
+                        </li>
+                    </ul>
                 </div>
                 <div class="box" id="code">
-                    <b>
+                    <h5>
                         Demo Notebooks
-                    </b>
+                    </h5>
+                    <img alt="gene expression analysis steps" src="website/steps.png" width="100%">
                     <ul>
                         <li>
                             <a>Benchmarking Alignment Methods</a>
@@ -98,11 +105,6 @@
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
                             <img class="rounded" src="website/icahn_cb.png" style="height: 5rem;">
-                        </a>
-                    </div>
-                    <div class="col-md-2 col-sm text-center">
-                        <a href="http://lincs-dcic.org" target="_blank">
-                            <img class="rounded" src="website/dcic_light.png" style="height: 5rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm text-center">
