--- a/website/stats.html
+++ b/website/stats.html
@@ -3,7 +3,8 @@
 <html lang="en">
     <head>
         <!--Styling-->
-        <link href="website/styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
+        <link href="favicon.ico" rel="icon">
 
         <!-- http://getbootstrap.com/docs/5.1/ -->
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
@@ -14,12 +15,14 @@
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
-                <a class="navbar-brand" href="index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
+                <img alt="logo" src="logo.png" style="height: 3.5rem;">
+                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="about.html" style="color: #ffffff">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
@@ -27,7 +30,7 @@
         </nav>
         <main class="py-4">
             <h2>
-                Stats
+                Statistics
             </h2>
             <ul>
                 <li>Data sources: GEO, CREEDS, GEN3VA, L1000</li>
@@ -41,17 +44,12 @@
                 <div class="row justify-content-center">
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
-                            <img class="rounded" src="website/icahn_cb.png" style="height: 5rem;">
-                        </a>
-                    </div>
-                    <div class="col-md-2 col-sm text-center">
-                        <a href="http://lincs-dcic.org" target="_blank">
-                            <img class="rounded" src="website/dcic_light.png" style="height: 5rem;">
+                            <img class="rounded" src="icahn_cb.png" style="height: 5rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://labs.icahn.mssm.edu/maayanlab/" target="_blank">
-                            <img class="rounded" src="website/maayanlab_logo.png" style="height: 5rem;">
+                            <img class="rounded" src="maayanlab_logo.png" style="height: 5rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm">
