--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                     </p>
                     <ul>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Studies</a> (Google Sheets)
+                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Gene Sets from Pubmed Studies</a> (Google Sheets)
+                        </li>
+                        <li>
+                            <a href="https://docs.google.com/spreadsheets/d/1YnM1ov-5oCb_vtcBehKA7WNklAJ269duIJQ7JLD0tUE/edit?usp=sharing">Entries from GEO</a> (Google Sheets)
                         </li>
                     </ul>
                     <p>
@@ -67,10 +70,13 @@
                     </p>
                     <ul>
                         <li>
-                            Dexamethasone Signatures
+                            <a href="L1000_data/dex_L1000.csv">Dexamethasone Signatures</a> (File Download)
                         </li>
                         <li>
-                            NR3C1 Pertubations
+                            <a href="L1000_data/nr3c1_OE.csv">NR3C1 Overexpression</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/nr3c1_kd.csv">NR3C1 Knockdown</a> (File Download)
                         </li>
                     </ul>
                 </div>
@@ -128,7 +134,7 @@
                                 <span class="badge badge-light">
                                 <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
                                      style="width: 1rem;">
-                                    </span>
+                                </span>
                                 Submit an issue
                             </a>
                         </div>
