--- a/website/stats.html
+++ b/website/stats.html
@@ -34,8 +34,9 @@
             </h2>
             <ul>
                 <li>Data sources: GEO, CREEDS, GEN3VA, L1000</li>
-                <li>Total studies and datasets: </li>
-                <li>Total organisms: 4</li>
+                <li>Total datasets: 9</li>
+                <li>Total studies: </li>
+                <li>Total organisms: 6</li>
                 <li>Total Notebooks: 1</li>
             </ul>
         </main>
