--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <li>
                             <a href="https://docs.google.com/spreadsheets/d/1dXm3RC852vQdg7s3vaZwwFotxbi5AnYGa0mYMUmLtn8/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Studies</a> (Google Sheets)
                         </li>
+                        <li>
+                            <a href="website/rnaseq_sigs.html">Computed Signatures</a> (Webpage)
+                        </li>
                     </ul>
                     <p>
                         Dexamethasone Microarray
@@ -62,7 +65,7 @@
                             <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Gene Sets from Pubmed Studies</a> (Google Sheets)
                         </li>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/1YnM1ov-5oCb_vtcBehKA7WNklAJ269duIJQ7JLD0tUE/edit?usp=sharing">Entries from GEO</a> (Google Sheets)
+                            <a href="https://docs.google.com/spreadsheets/d/1YnM1ov-5oCb_vtcBehKA7WNklAJ269duIJQ7JLD0tUE/edit?usp=sharing" target="_blank">Entries from GEO</a> (Google Sheets)
                         </li>
                     </ul>
                     <p>
@@ -85,12 +88,12 @@
                         Demo Notebooks
                     </h5>
                     <img alt="gene expression analysis steps" src="website/steps.png" width="100%">
-                    <ul>
+                    <ul id="notebooks">
                         <li>
                             <a>Benchmarking Alignment Methods</a>
                         </li>
                         <li>
-                            <a>Benchmarking Data Normalization Methods</a>
+                            <a href="Benchmarking Normalization Methods/benchmarking_normalization.ipynb">Benchmarking Data Normalization Methods</a>
                         </li>
                         <li>
                             <a>Benchmarking Clustering Methods</a>
