Updated Benchmarking Notebooks

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <a>Benchmarking Alignment Methods</a>
                         </li>
                         <li>
-                            <a href="Benchmarking Normalization Methods/benchmarking_normalization.ipynb">Benchmarking Data Normalization Methods</a>
+                            <a href="Benchmarking Normalization Methods/benchmarking_normalization.html">Benchmarking Data Normalization Methods</a>
                         </li>
                         <li>
                             <a>Benchmarking Clustering Methods</a>
