--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                     </p>
                     <ul>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Gene Sets from Pubmed Studies</a> (Google Sheets)
+                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank">Gene Sets from Pubmed Studies</a> (Google Sheets)
+                        </li>
+                        <li>
+                            <a href="https://docs.google.com/spreadsheets/d/1NoENbcKwrlu5_99qctkg9wsGOJgbC4PichXqfe6qYeA/edit?usp=sharing" target="_blank">Gene Sets from ENCODE, ReMap, ChEA</a> (Google Sheets)
                         </li>
                         <li>
                             <a href="https://docs.google.com/spreadsheets/d/1YnM1ov-5oCb_vtcBehKA7WNklAJ269duIJQ7JLD0tUE/edit?usp=sharing" target="_blank">Entries from GEO</a> (Google Sheets)
