--- a/website/stats.html
+++ b/website/stats.html
@@ -32,13 +32,34 @@
             <h2>
                 Statistics
             </h2>
-            <ul>
-                <li>Data sources: GEO, CREEDS, GEN3VA, L1000</li>
-                <li>Total datasets: 9</li>
-                <li>Total studies: </li>
-                <li>Total organisms: 6</li>
-                <li>Total Notebooks: 1</li>
-            </ul>
+            <h4 style="margin-top: 20px">Counts</h4>
+            <table class="table">
+                <thead></thead>
+                <tr>
+                    <td>Data Sources</td>
+                    <td class="text-end">GEO, CREEDS, GEN3VA, L1000</td>
+                </tr>
+                <tr>
+                    <td>Total Datasets</td>
+                    <td class="text-end">9</td>
+                </tr>
+                <tr>
+                    <td>Total Studies</td>
+                    <td class="text-end"></td>
+                </tr>
+                <tr>
+                    <td>Total Organisms</td>
+                    <td class="text-end">6</td>
+                </tr>
+                <tr>
+                    <td>Total Notebooks</td>
+                    <td class="text-end">2</td>
+                </tr>
+            </table>
+            <h4>Datasets by Source</h4>
+            <img alt="graph (todo)" href="#">
+            <h4>Entries per Dataset</h4>
+            <img alt="graph (todo)" href="#">
         </main>
         <footer class="footer">
             <div class="container">
