--- a/website/stats.html
+++ b/website/stats.html
@@ -37,7 +37,7 @@
                 <thead></thead>
                 <tr>
                     <td>Data Sources</td>
-                    <td class="text-end">GEO, CREEDS, GEN3VA, L1000</td>
+                    <td class="text-end">GEO, CREEDS, GEN3VA, L1000, ENCODE, ReMap, ChEA3, Pubmed</td>
                 </tr>
                 <tr>
                     <td>Total Datasets</td>
@@ -56,9 +56,9 @@
                     <td class="text-end">2</td>
                 </tr>
             </table>
-            <h4>Datasets by Source</h4>
+            <h4>First Graph Title</h4>
             <img alt="graph (todo)" href="#">
-            <h4>Entries per Dataset</h4>
+            <h4>Second Graph Title</h4>
             <img alt="graph (todo)" href="#">
         </main>
         <footer class="footer">
