--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 The Dexamethasone Benchmark: Datasets and Code to Evaluate the Quality of Methods for Processing Omics Data
             </h2>
             <img alt="graphical abstract" src="website/graphical_abstract.png" width="65%" class = "center">
-            <div id="files">
+            <div class="row">
                 <div class="box" id="data">
                     <h5>
                         Curated and Processed Datasets 
