--- a/website/stats.html
+++ b/website/stats.html
@@ -36,16 +36,20 @@
             <table class="table">
                 <thead></thead>
                 <tr>
-                    <td>Data Sources</td>
-                    <td class="text-end">GEO, CREEDS, GEN3VA, L1000, ENCODE, ReMap, ChEA3, Pubmed</td>
+                    <td>Data Sources: GEO, CREEDS, GEN3VA, SigCom LINCS, ENCODE, ReMap, ChEA3, Pubmed</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>Total Datasets</td>
                     <td class="text-end">9</td>
                 </tr>
                 <tr>
-                    <td>Total Studies</td>
-                    <td class="text-end"></td>
+                    <td>Total Data Entries</td>
+                    <td class="text-end">1065</td>
+                </tr>
+                <tr>
+                    <td>Total Computed Signatures</td>
+                    <td class="text-end">675</td>
                 </tr>
                 <tr>
                     <td>Total Organisms</td>
@@ -55,11 +59,18 @@
                     <td>Total Notebooks</td>
                     <td class="text-end">2</td>
                 </tr>
+                <tfoot><tr></tr></tfoot>
             </table>
-            <h4>First Graph Title</h4>
-            <img alt="graph (todo)" href="#">
-            <h4>Second Graph Title</h4>
-            <img alt="graph (todo)" href="#">
+            <div class="row">
+                <div class="text-center">
+                    <h4>Data Entries by Sequencing Type</h4>
+                    <img alt="bar graph by type" src="type.png" width="100%">
+                </div>
+                <div class="text-center">
+                    <h4>Data Entries by Source</h4>
+                    <img alt=" bar graph by source" src="source.png" width="100%">
+                </div>
+            </div>
         </main>
         <footer class="footer">
             <div class="container">
